fix: change alignment in hero section

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -149,7 +149,7 @@ h6 {
 }
 
 #hero .hero {
-  margin-top: 13%;
+  margin-top: 8%;
   height: fit-content;
   padding: 40px;
   text-align: left;
